# PenFramework

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.txt  Main.cpp  PenFramework.slnx  PenFramework.vcxproj  PenFramework.vcxproj.filters  README.md
Code/: Main.cpp
Code/Engine/Analysis/Time/: PerformanceTimer.hpp
Code/Engine/Common/: Type.hpp
Code/Engine/CoreApplication/: CoreApplication.cpp  CoreApplication.h
Code/Engine/Coroutine/: AsyncTask.hpp  Awaitable.hpp  Awaiter.hpp
Code/Engine/DebugTools/: Verify.hpp
Code/Engine/Environment/: DXEnvironment.h  Win32Environment.h  WinEnvironment.h
Code/Engine/Exception/: Exception.hpp  InvalidArgument.hpp
Code/Engine/IO/: IAsyncIODevice.h  IIODevice.h  IInputStream.h  IOutputStream.h  Path.cpp  Path.h  URI.cpp  URI.h
Code/Engine/IO/Hardware/: FileDevice.cpp  FileDevice.h
Code/Engine/IO/Internal/: PathAnalyzer.cpp  PathAnalyzer.h  PathNormalizer.cpp  PathNormalizer.h  PathUtils.cpp  PathUtils.h
Code/Engine/Math/: Color.hpp  Mat3x3.hpp  Mat4x4.hpp  Math.hpp  MathFunction.hpp  Vec2.hpp  Vec3.hpp  Vec3x3.hpp  Vec4.hpp  Vec4x4.hpp
Code/Engine/Memory/: Memory.hpp  MemoryAllocator.hpp  Utils.hpp
Code/Engine/Objects/: PObject.cpp  PObject.h  WorldObject.h
Code/Engine/String/: Format.hpp  Fromat.hpp  StrSearchUtils.hpp  String.cpp  String.h  String.hpp  StringMap.hpp  StringSet.hpp  StringStorage.hpp  StringTransparentHash.hpp  StringUnorderedMap.hpp  StringUnorderedSet.hpp  StringView.hpp  Utils.hpp
Code/Engine/Utils/: Concept.hpp  Flag.hpp  Iterator.hpp  Logger.hpp  Preprocessor.hpp  Ranges.hpp  Singleton.hpp  TransparentHash.hpp
Code/Engine/UtilsContainer/: StringContainer.hpp
Code/UnitTest/: UnitTestFramework.cpp  UnitTestFramework.h  UnitTestInterface.hpp
Code/UnitTest/BasicOutputInterface/: ConsoleInterface.cpp  ConsoleInterface.h
Code/UnitTest/Core/: Core.cpp  Core.h  UnitTestFramework.h
Code/UnitTest/OutputInterface/: ConsoleInterface.cpp  ConsoleInterface.h  Interface.hpp
Code/UnitTest/Tests/: Test_Format.hpp  Test_Math.hpp  Test_MathFunction.hpp  Test_String.hpp  Test_String_NotVectorizedFindXXX.hpp  Test_UnixLikePath.hpp  Test_Vec2.hpp  Test_Vec3.hpp  Test_Vec4.hpp  Test_WindowsPath.hpp
CodeSnippet/: FileHeader.snippet
